--- a/src/styles/information.css
+++ b/src/styles/information.css
@@ -1,6 +1,20 @@
+.style1{
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 400px;
+}
+.content-left{
+    height: 100%;
+    display: flex;
+    align-items: center;
 
+}
 .bg-list{
-    width:60%;
+    position: absolute;
+    width :50%;
     background: var(--secondary);
     padding: 20px;
     border-radius: 10px;
@@ -18,7 +32,6 @@
     width: 100%;
     display: inline-flex;
     justify-content: space-between;
-    /* padding-inline: 20px; */
     font-size: var(--font-size-body3);
     border: none;
     font-weight: bolder;
@@ -51,4 +64,14 @@
     display: none;
 }
 
+.content-right {
+    width: 50%;
+    height: 100%;
+}
 
+.content-right img {
+    width: 100%; 
+    height: 100%; 
+    object-fit: cover; 
+    border-radius: 10px;
+}
