--- a/src/styles/appointments.css
+++ b/src/styles/appointments.css
@@ -33,16 +33,29 @@
 .hero-specialist{
     width: 100%;
     height: 300px;
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/Assets/national-cancer-institute-c6rgP7K5rXc-unsplash.jpg);
-    background-position: center;
-    background-size: cover;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
+    position: relative;
 }
+.hero-specialist img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+.hero-specialist::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+  }
 .hero-specialist h1{
+    position: absolute;
     color: var(--textlight);
     font-size: var(--font-size-h1);
+    top: 40%;
+    left: 40%;
 }
 
 
