--- a/src/styles/calendar.css
+++ b/src/styles/calendar.css
@@ -34,7 +34,7 @@
 }
 .card-appoiments-calendar{
     width: 18rem;
-    height: 250px;
+    height: 260px;
     background: var(--container);
     box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.50);
     background: var(--container);
@@ -196,7 +196,8 @@
     height: 100%;
     top: 0;
     left: 0;
-    background-color: var(--bg-main);
+    background-color: var(--secondary);
+    /* background-color: var(--bg-main); */
     padding: 20px;
     grid-template-columns: repeat(3, auto);
     gap: 5px;
@@ -204,6 +205,7 @@
     transform: scale(1.5);
     visibility: hidden;
     pointer-events: none;
+    border-radius: 10px;
 }
 
 .month-list.show {
