--- a/src/components/calendar.html
+++ b/src/components/calendar.html
@@ -114,7 +114,9 @@
                             </div>
                         </div>
                         <div class="book-click">
-                            <a href="#">Book</a>
+                            <form>
+                                <button type="submit">Book</button>
+                            </form>
                         </div>
                     </div>
                 </div>
