--- a/src/styles/calendar.css
+++ b/src/styles/calendar.css
@@ -64,7 +64,7 @@
     display: flex;
     justify-content: center;
 }
-.book-schedule div a{
+.book-click form button{
     padding-inline: 30px;
     padding-block: 10px;
     margin-top: 30px;
@@ -72,11 +72,13 @@
     color: var(--dark-text);
     background: #0000ff;
     border-radius: 5px;
+    border: none;
+    cursor: pointer;
     
 }
 .card-appoiments-calendar{
     width: 18rem;
-    height: 240px;
+    height: 260px;
     background: var(--container);
     box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.50);
     background: var(--container);
