chore: change structure class book-click

--- a/src/components/calendar.html
+++ b/src/components/calendar.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="/src/styles/navbar.css">
         <link rel="stylesheet" href="/src/styles/footer.css">
         <link rel="stylesheet" href="/src/styles/fotnav-res.css"> <!--Responsive navbar and Footer-->
+        <link rel="stylesheet" href="/responsive.css">
     </head>
 
     <body>
