want to back code

--- a/src/components/calendar.html
+++ b/src/components/calendar.html
@@ -115,9 +115,7 @@
                             </div>
                         </div>
                         <div class="book-click">
-                            <form>
-                                <button type="submit">Book</button>
-                            </form>
+                            <a href="#">Book</a>
                         </div>
                     </div>
                 </div>
