chore: change css and change structure book

--- a/src/components/calendar.html
+++ b/src/components/calendar.html
@@ -115,7 +115,10 @@
                             </div>
                         </div>
                         <div class="book-click">
-                            <a href="#">Book</a>
+                            <form >
+                                <button type="submit">Book </button>
+                            </form>
+                            <!-- <a href="#">Book</a> -->
                         </div>
                     </div>
                 </div>
