--- a/src/styles/calendar.css
+++ b/src/styles/calendar.css
@@ -74,11 +74,12 @@
     background: #0000ff;
     border-radius: 5px;
     border: none;
+    cursor: pointer;
     
 }
 .card-appoiments-calendar{
     width: 18rem;
-    height: 240px;
+    height: 260px;
     background: var(--container);
     box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.50);
     background: var(--container);
