--- a/src/styles/calendar.css
+++ b/src/styles/calendar.css
@@ -11,7 +11,7 @@
     --light-hover: #edf0f5;
     --light-text: #151426;
 
-    --blue: #0000ff;
+    --blue: #192A51;
     --white: #fff;
 
     --shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
@@ -71,7 +71,7 @@
     margin-top: 30px;
     text-decoration: none;
     color: var(--dark-text);
-    background: #0000ff;
+    background: #192a51;
     border-radius: 5px;
     border: none;
     cursor: pointer;
@@ -79,7 +79,7 @@
 }
 .card-appoiments-calendar{
     width: 18rem;
-    height: 260px;
+    height: 280px;
     background: var(--container);
     box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.50);
     background: var(--container);
